--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-slick": "^0.30.2",
-    "sass": "^1.71.0"
+    "sass": "^1.71.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
