--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
     "sass": "^1.71.0",
     "slick-carousel": "^1.8.1"
   },
